rca/static_src/sass/components/_slideshow.scss
.slideshow {
    $root: &;
    $meta-height: 20px;
    $meta-height-w-author: 65px;
    padding-bottom: ($gutter * 2);

    &--author-info {
        #{$root}__controls {
            @include media-query(large) {
                top: -$meta-height-w-author;
            }
        }

        #{$root}__scrollbar {
            @include media-query(medium) {
                margin-top: 0;
            }
        }
    }

    &__liveregion {
        @include hidden();
    }

    &__item {
        opacity: 0.36;
        transition: opacity $transition;

        &.glide__slide--active {
            opacity: 1;
        }
    }

    &__controls {
        @include media-query(large) {
            position: relative;
            top: -$meta-height;
            pointer-events: none; // ensure links in overlaid content still work
        }
    }

    &__controls-group {
        display: none;
        grid-column: 5;
        pointer-events: auto; // ensure prev/next buttons are clickable

        @include media-query(large) {
            @include z-index(overlap);
            display: block;
            background-color: $color--white;

            &::after {
                @include z-index(under);
                content: '';
                position: absolute;
                display: block;
                background-color: $color--white;
                right: -20%;
                top: 0;
                height: $meta-height;
                width: 30%;
            }
        }
    }

    &__button {
        border-radius: 50%;
        width: 46px;
        height: 46px;
        margin: 0;
        padding: 0;
        transition: background-color $transition;

        &:first-child {
            margin-right: $gutter;
        }

        &:hover,
        &:active,
        &:focus {
            outline: none;
        }
    }

    &__scrollbar {
        position: relative;
        height: 2px;
        grid-column: 1 / span 2;
        margin-top: $gutter;
        background-color: $color--scrollbar-lightbg-bg; // overriden by theme

        @include media-query(medium) {
            margin-top: ($gutter * 2);
        }

        @include media-query(large) {
            display: none;
        }
    }

    &__scrollbar-progress {
        position: absolute;
        height: 100%;
        background-color: $color--black; // overriden by theme
    }

    .bg--dark & {
        #{$root}__controls-group {
            background-color: $color--black;

            &::after {
                background-color: $color--black;
            }
        }

        #{$root}__scrollbar {
            background-color: $color--scrollbar-darkbg-bg;
        }

        #{$root}__scrollbar-progress {
            background-color: $color--white;
        }

        #{$root}__button {
            &:hover,
            &:active,
            &:focus {
                stroke: $color--black;
                background-color: $color--white;
            }
        }
    }
}

